# luksctl

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.ja.md  README.ko.md  README.md
locales/: en.yml  ja.yml  ko.yml
src/: i18n.rs  lib.rs  luks.rs  mapper.rs  mount.rs
