[package]
name = "luksctl"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for mounting and unmounting LUKS encrypted volumes"
authors = ["zeroday0619"]
license = "Menhera Open Source License"

[[bin]]
name = "luks_mount"
path = "src/bin/luks_mount.rs"

[[bin]]
name = "luks_umount"
path = "src/bin/luks_umount.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
rpassword = "7.3"
anyhow = "1.0"
nix = { version = "0.27", features = ["fs", "mount", "user"] }
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.10"
rust-i18n = "3"
sys-locale = "0.3"
